--- a/auto_pong.html
+++ b/auto_pong.html
@@ -6,6 +6,6 @@
 <body>
 	<canvas id='canv' width='150px' height='350'></canvas>
 	<div id='score'>0</div>
-	<!--<div id='diff'>0</div> -->
-	<script src='pong.js'></script>
+	<!--<div id='diff'>0</div>-->
+	<script src='auto_pong.js'></script>
 </body>
