refactored some functions. removed some redundancies.

--- a/auto_pong.html
+++ b/auto_pong.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<title>Pong</title>
 </head>
@@ -13,9 +14,7 @@
 			<div>P1:<div id='p1' style='display:inline;'>0</div>
 			</div>
 		</div>
-		<div>
-			
-		</div>
 	</div>
 	<script src='auto_pong.js'></script>
 </body>
+</html>
