added .ico file

--- a/auto_pong.html
+++ b/auto_pong.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Pong</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/thumbnails/pong.ico">
 </head>
 <body>
 	<div style='text-align:center; font-family: helvetica;'>
