--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 	<meta name='viewport' content=' width=device-width, initial-scale=0.75, maximum-scale=0.75, user-scalable=0' />
 	<link rel="shortcut icon" type="image/x-icon" href="pong.ico">
 	<link rel='stylesheet' tyle='text/css' href='pong.css'>
+	<link href="https://fonts.googleapis.com/css?family=Dhurjati" rel="stylesheet">
 </head>
 <body>
 	<div id="outer-container">
 		<div id="pong-container">
 			<canvas id='pong-canvas' width='400' height='200'></canvas>
 			<div id="stats-container">
-				<span id='bounce'>0</span>
-				<span id='p2'>0</span> 
-				<span id='p1'>0</span>
+				<span id='p1' class="display">0</span>
+				<span id='bounce' class="display">0</span>
+				<span id='p2' class="display">0</span> 
 			</div>
 		</div>
 	</div>
