--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://zachfudge.com/images/icons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://zachfudge.com/images/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://zachfudge.com/images/icons/favicon-16x16.png">
+	<link rel="manifest" href="https://zachfudge.com/images/icons/site.webmanifest">
+	<link rel="mask-icon" href="https://zachfudge.com/images/icons/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#2d89ef">
+	<meta name="theme-color" content="#ffffff">
 	<title>Zach Fudge - Pong</title>
-	<meta charset="UTF-8" />
 	<meta name='viewport' content=' width=device-width, initial-scale=0.75, maximum-scale=0.75, user-scalable=0' />
 	<link rel="shortcut icon" type="image/x-icon" href="pong.ico">
 	<link rel='stylesheet' tyle='text/css' href='pong.css'>
 	<link href="https://fonts.googleapis.com/css?family=Dhurjati" rel="stylesheet">
 </head>
 <body>
+	<div id="nav-placeholder"></div>
 	<div id="outer-container">
 		<div id="pong-container">
 			<canvas id='pong-canvas' width='400' height='200'></canvas>
@@ -20,5 +28,8 @@
 		</div>
 	</div>
 	<script src='pong.js'></script>
+	<script type="text/javascript">
+		document.getElementById('nav-placeholder').innerHTML = '<object type="text/html" data="../nav.html" ></object>';
+	</script>
 </body>
 </html>
